<?xml version="1.0" encoding="utf-8"?>

<!--
Matthew Noffsinger
CSCI 490
Final project "Whats for dinner" app
-->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivityConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAppBackground"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonWhatsForDinner"
        android:layout_width="@dimen/big_button_width"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="292dp"
        android:backgroundTint="@color/colorBigButton"
        android:contentDescription="Whats For Dinner"
        android:text="@string/WFDbuttonTest"
        android:textColor="@color/colorBigButtonText"
        android:textSize="@dimen/big_button_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMeals"
        android:layout_width="@dimen/big_button_width"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorBigButton"
        android:text="@string/mealsText"
        android:textColor="@color/colorBigButtonText"
        android:textSize="@dimen/big_button_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonWhatsForDinner" />

    <Button
        android:id="@+id/buttonRandomMeal"
        android:layout_width="@dimen/big_button_width"
        android:layout_height="67dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorBigButton"
        android:text="@string/randomMeal"
        android:textColor="@color/colorBigButtonText"
        android:textSize="@dimen/big_button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMeals"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="350dp"
        android:layout_height="165dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonWhatsForDinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058"
        app:srcCompat="@drawable/logofmt" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/familyFAB"
        android:layout_width="60dp"
        android:layout_height="59dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:src="@drawable/ic_action_family"
        android:tint="@color/colorPrimary"
        app:backgroundTint="@color/colorSelected"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_optimizationLevel="direct"
        app:rippleColor="@color/colorBigButton" />

</android.support.constraint.ConstraintLayout>