<?xml version="1.0" encoding="utf-8"?>

<!--
Matthew Noffsinger
CSCI 490
Final project "Whats for dinner" app
-->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/memberActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAppBackground"
    tools:context=".MemberProfileActivity">

    <TextView
        android:id="@+id/tempNameMemberTextView"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="tempName"
        android:textColor="@color/colorBigButtonText"
        android:textSize="@dimen/memberTextTitle"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/memberTitle"
        android:textColor="@color/colorBigButtonText"
        android:textSize="@dimen/memberTextTitle"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/familyMemeberListView"
        android:layout_width="306dp"
        android:layout_height="61dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:background="@color/colorBigButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempNameMemberTextView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/listViewLikesTitle"
        android:textColor="@color/colorBigButtonText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/familyMemeberListView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/listViewAllergiesTitle"
        android:textColor="@color/colorBigButtonText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/familyFABfromMemberProfile"
        android:layout_width="60dp"
        android:layout_height="59dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:src="@drawable/ic_action_family"
        android:tint="@color/colorPrimary"
        app:backgroundTint="@color/colorSelected"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_optimizationLevel="direct"
        app:rippleColor="@color/colorBigButton" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/homeFABfromMemberProfile"
        android:layout_width="60dp"
        android:layout_height="59dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:src="@drawable/ic_action_home"
        android:tint="@color/colorPrimary"
        app:backgroundTint="@color/colorSelected"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_optimizationLevel="direct"
        app:rippleColor="@color/colorBigButton" />

    <Button
        android:id="@+id/addLikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:text="Add"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
        app:layout_constraintEnd_toStartOf="@+id/buttonRemove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/familyMemeberListView"
        app:layout_constraintVertical_bias="0.496" />

    <Button
        android:id="@+id/removeLikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Remove"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintStart_toEndOf="@+id/addLikeButton"
        app:layout_constraintTop_toBottomOf="@+id/familyMemeberListView"
        app:layout_constraintVertical_bias="0.489" />

    <Button
        android:id="@+id/addAllergieButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="332dp"
        android:text="Add"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
        app:layout_constraintEnd_toStartOf="@+id/buttonRemove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496" />

    <Button
        android:id="@+id/removeAllergieButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="332dp"
        android:text="Remove"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintStart_toEndOf="@+id/addAllergieButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.489" />

    <ListView
        android:layout_width="306dp"
        android:layout_height="61dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="264dp"
        android:background="@color/colorBigButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>